# mangatra-gui

./: next.config.js  package.json  test.jsx
.metals/: metals.mv.db
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  error.rs  main.rs
src/components/: Canvas.tsx  DragArea.tsx  Filetree.tsx  TextPair.tsx  Texttable.tsx  fill-flex-parent.tsx  merge-refs.ts
src/pages/: _app.tsx  home.tsx  index.tsx  test.tsx
src/styles/: Canvas.module.css  Canvas.module.css.map  Canvas.module.sass  Home.module.css  Home.module.css.map  Home.module.sass  Navbar.module.css.map  Test.css.map  Test.sass  filetree.module.css
