[package]
name = "mangatra_gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
thiserror = "1.0.40"
serde_json = "1.0.94"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-open", "dialog-save", "fs-read-dir", "fs-read-file", "fs-write-file", "shell-open", "window-set-max-size", "window-set-min-size"] }
image = "0.24.5"
url = "2.3.1"
base64 = "0.21.0"
tauri-plugin-window-state = "0.1"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
